PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite 5.4 Milestone 2
5 October 2014

- pts-core: Add "ResultAfterString" to test result parser XML schema
- pts-core: Other result file parsing improvements/fixes
- pts-core: Rename debug-run mode to debug-benchmark, add extra features
- pts-core: Separate out NoNetworkCommunication user option into NoInternetCommunication/NoNetworkCommunication user config options for those still wanting LAN/intranet support
- pts-core: Add support to PTS clients for automatically finding Phoromatic Servers using Avahi zero-conf network discovery
- pts-core: Improvements to make-download-cache
- pts-core: Improved detection of file downloads that fail and serve HTML 404/not found responses
- pts-core: Convert to a JSON-based representation instead of XML for the pts-download-cache file
- pts-core: Various file hash checking improvements during test installation
- pts-core: Allow Phoronix Test Suite clients to automatically discover Phoromatic download-cache archives
- pts-core: Rewrite most of the RPM package generator
- pts-core: Support /usr/share/phoronix-test-suite/download-cache as another download cache by default
- pts-core: Client support for being able to obtain OpenBenchmarking.org index/test/suite data from local Phoromatic Servers
- pts-core: Improved dump-core-storage output
- pts-core: Introduce machine_self_id as UUIDv5 compliant self-generated unique identifier for each PTS client
- pts-core: Allow result file titles up to 126 characters in length
- pts-core: Add start of basic Phoromatic Server systemd service file
- pts-core: Add start of basic Phoromatic Server Upstart conf file
- pts-core: Introduce make-openbenchmarking-cache sub-command for trying to cache all test/suite meta-data from OpenBenchmarking.org
- pts-core: Allow PhoromaticServers user-config.xml to specify static Phoromatic Server IP:port information
- pts-core: Initial Upstart and systemd configurations for the Phoromatic clients