@@ -19,6 +19,7 @@
 	You should have received a copy of the GNU General Public License
 	along with this program. If not, see <http://www.gnu.org/licenses/>.
 */
+define('PHOROMATIC_SERVER', true);
 error_reporting(E_ALL);
 session_start();
 include('../phoromatic_functions.php');
